feat: discrete pivot limits